fudanbot_ws/log/build_2024-12-11_16-24-54/motor_driver/stderr.log
  File "/home/desu/fudanbot_ws/install/motor_driver/lib/python3.10/site-packages/motor_driver/motor_driver.py", line 35
    self.get_logger().info('linearVel: "%s"' self.linearVel)
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

